Fix layout issues on Products page by separating each option into its own section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,12 @@ h2 {
     color: #1F89E0;
 }
 
+h5 {
+    font-family: "Montserrat", sans-serif;
+    letter-spacing: .2rem;
+    padding-bottom: 1rem;
+    color: #1F89E0;
+}
 /*-------------------------Header----------------------- */ 
 #logo {
     height: 3rem;
@@ -156,6 +162,31 @@ h2 {
 }
 
 /*--------------------Our Products Page----------------- */ 
+.products-section {
+    text-align: center;
+    padding: 4rem 2rem .5rem 2rem;
+}
+
+.options-section1 {
+    text-align: center;
+    padding: 1.5rem;
+    margin: 1rem;
+    background-color: #0C375A;
+    color: #ffffff;
+}
+.options-section1 h5 {
+    color: #ffffff;
+}
+
+.options-section2 {
+    text-align: center;
+    padding: 1.5rem;
+    margin: 1rem;
+}
+
+.options-section1 ul, .options-section2 ul {
+    text-align: left;
+}
 
 /*----------------------Contact Page-------------------- */ 
 .contact-section {
